# Agentic-LLM-DnD-GM

./: .env.example  .gitignore  README.md  SETUP.md  docker-compose.yml  requirements.txt
.cursor/rules/: process-task-list.mdc
agents/campaign-designer/: Dockerfile  pyproject.toml
agents/campaign-designer/app/: agent.py  main.py
agents/character-creator/: Dockerfile  pyproject.toml
agents/character-creator/app/: agent.py  main.py
agents/dm-agent/: Dockerfile  pyproject.toml
agents/dm-agent/app/: agent.py  main.py
agents/memory-agent/: Dockerfile  pyproject.toml
agents/memory-agent/app/: agent.py  main.py
agents/npc-agent/: Dockerfile  pyproject.toml
agents/shared/: a2a.py  helpers.py  mcp_client.py  mcp_models.py
api/: Dockerfile  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 001_initial.py  002_turn_session_phase.py
api/app/: a2a_client.py  config.py  database.py  dispatcher.py  main.py  redis_client.py
api/app/auth/: dependencies.py  models.py  router.py  schemas.py  service.py
api/app/campaigns/: router.py  schemas.py
api/app/game/: router.py  schemas.py
api/app/sse/: publisher.py
docs/: architecture-viz.html  campaign_save_schema.md  tts.md  whisper.md
documentation/: PLAN.md  PRODUCT.md
frontend/: index.html  nginx.conf  package.json
frontend/src/: api.ts  audioRecorder.ts  main.tsx  sse.ts
mcp-servers/knowledge-mcp/: Dockerfile  pyproject.toml
mcp-servers/media-mcp/: Dockerfile  pyproject.toml
mcp-servers/memory-mcp/: Dockerfile  pyproject.toml
mcp-servers/memory-mcp/app/: embedder.py  main.py  qdrant_client.py
mcp-servers/memory-mcp/app/tools/: memory.py
mcp-servers/shared/: db.py  middleware.py  schemas.py
mcp-servers/state-mcp/: Dockerfile  pyproject.toml
observability/: alerts.yml  docker-compose.yml  prometheus.yml  promtail.yml  tempo.yml
services/image-service/: Dockerfile  pyproject.toml
services/llm-service/: Dockerfile  pyproject.toml
services/llm-service/app/: main.py  providers.py
services/stt-service/: Dockerfile  pyproject.toml
services/stt-service/app/: main.py
services/tts-service/: Dockerfile  pyproject.toml
src/: cache.py  campaign_save_schema.md  config.example.py  image.py  llm.py  main.py  memory.py  qt.py  stt.py  tts.py  website.py  wip.py  wip2.py
src/agents/: base_agent.py  langchain_adapter.py  master_agent.py  scene_agent.py
src/audio/: stt.py  tts.py
src/context/: compression.py
src/image/: generator.py  prompt_builder.py
src/persistence/: storage.py
src/save/: save_state.json
src/ui/: dashboard.py  logger_cli.py
tasks/: prd-agentic-llm-dnd.md  tasks-prd-agentic-llm-dnd.md
(+41 files in other folders)
