[project]
name = "memory-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "redis[asyncio]>=5.0.0",
    "pydantic>=2.0.0",
    "opentelemetry-distro",
    "opentelemetry-exporter-otlp-proto-http",
    "opentelemetry-exporter-prometheus",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
